tests/invalid/bytearray_append_wrong_count/main.py
def run_case() -> None:
    ba: bytearray = bytearray(b"hi")

    ba.append(1, 2)

if __name__ == "__main__":
    run_case()
